Browse-search metadata text field UX: 1) Add "..." help button which includes a list of options. 2) Add placeholder text to indicate that the field expects the entire value, not just a substring.

--- a/project/lib/templates/lib/forms/box_fields.html
+++ b/project/lib/templates/lib/forms/box_fields.html
@@ -2,5 +2,6 @@
   {# Put label+field in a div to ensure they stay on the same line. #}
   <div class="field-and-label-wrapper">
     {{ field.label }}: {{ field }}
+    {% include "lib/forms/box_field_help_text.html" with field=field %}
   </div>
 {% endfor %}
