--- a/project/visualization/templates/visualization/help_browse.html
+++ b/project/visualization/templates/visualization/help_browse.html
@@ -18,7 +18,7 @@
   <li>
     If some of your images have values filled in for the auxiliary metadata fields, those metadata fields will appear on the search form. This will typically appear as a dropdown field, but it will be a text-input field if the source has a large number of unique values for that field.
     <ul>
-      <li>If it's a text-input field, entering <kbd>(none)</kbd> will search for blank values.</li>
+      <li>If it's a text-input field, click the <kbd>...</kbd> button next to the field for more details.</li>
     </ul>
   </li>
 </ul>
