CPC batch editor: don't allow exceeding the server-side file upload limit of 1000 (999 cpc's + 1 csv).

--- a/project/cpce/templates/cpce/cpc_batch_editor.html
+++ b/project/cpce/templates/cpce/cpc_batch_editor.html
@@ -113,7 +113,7 @@
 
   {# Script in the body will run on page load. #}
   <script type="text/javascript">
-    let cpcBatchEditor = new CPCBatchEditor();
+    let cpcBatchEditor = new CPCBatchEditor({{ max_cpc_files }});
   </script>
 
 {% endblock %}
