--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -176,6 +176,8 @@
 
             <li><a href="{% url 'blog:post_list' %}"><span>Blog</span></a></li>
 
+            <li><a href="{% url 'privacy_policy' %}"><span>Privacy</span></a></li>
+
             <li><a href="{% url 'about' %}"><span>About</span></a></li>
 
             <li><a href="https://github.com/coralnet/coralnet"><span>GitHub</span></a></li>
