About/Privacy CSS: change the .center rule to div.article-body.narrow.
This makes it more potentially reusable without causing collisions with other rules.

--- a/project/lib/templates/lib/about.html
+++ b/project/lib/templates/lib/about.html
@@ -8,9 +8,11 @@
 {% block content %}
 
 
-<div class="article-body center">
-<a class="section-anchor section-anchor-top" data-scroll-name="#main"></a>
-<h1>About CoralNet</h1>
+<div class="article-body narrow">
+
+    <a class="section-anchor section-anchor-top" data-scroll-name="#main"></a>
+
+    <h1>About CoralNet</h1>
 
     <p class="abstract">
         CoralNet is a resource for benthic images analysis.
