--- a/project/lib/templates/lib/privacy_policy.html
+++ b/project/lib/templates/lib/privacy_policy.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<div class="article-body center">
+<div class="article-body narrow">
 
 <h1>CoralNet's Privacy Policy</h1>
 
