About page: tweak HTML/CSS of back-to-top arrows.
- Add "Back to top" mouseover text.

- Wrap in <div>, not <p>, since it's semantically not a paragraph.

- Type the Unicode up-arrows directly into the HTML file, rather than using escape codes. This should be fine in reasonably modern browsers, particularly since we use <meta charset="utf-8" />.

- Remove margin rules since they weren't doing anything.

- Merge uparrow and border classes into a single back-to-top-arrow class.

--- a/project/lib/templates/lib/about.html
+++ b/project/lib/templates/lib/about.html
@@ -52,7 +52,7 @@
         makes the remaining annotation work easier.
     </p>
 
-    <p class="uparrow border"><a href="#main">&#9650</a></p>
+    <div class="back-to-top-arrow"><a title="Back to top" href="#main">▲</a></div>
 
     <h2 id="story">Story<a class="section-anchor" data-scroll-name="#story"></a></h2>
     <h4>Introduction</h4>
@@ -142,7 +142,7 @@
         to see what we're working on, learn how the website works, or even contribute improvements.
     </p>
 
-    <p class="uparrow border"><a href="#main">&#9650</a></p>
+    <div class="back-to-top-arrow"><a title="Back to top" href="#main">▲</a></div>
 
     <h2 id="credits">Credits<a class="section-anchor" data-scroll-name="#credits"></a></h2>
     <p>
@@ -169,7 +169,7 @@
         </li>
     </ul>
 
-    <p class="uparrow border"><a href="#main">&#9650</a></p>
+    <div class="back-to-top-arrow"><a title="Back to top" href="#main">▲</a></div>
 
     <h2 id="people">People<a class="section-anchor" data-scroll-name="#people"></a></h2>
     <h3>Current</h3>
@@ -193,7 +193,7 @@
             <li>Jeff Sandvik - Developer</li>
         </ul>
 
-    <p class="uparrow border"><a href="#main">&#9650</a></p>
+    <div class="back-to-top-arrow"><a title="Back to top" href="#main">▲</a></div>
 
     <h2 id="papers">Papers<a class="section-anchor" data-scroll-name="#papers"></a></h2>
     <p>
@@ -245,7 +245,7 @@
         </p></li>
     </ul>
 
-    <p class="uparrow border"><a href="#main">&#9650</a></p>
+    <div class="back-to-top-arrow"><a title="Back to top" href="#main">▲</a></div>
 
     <h2 id="press">Press<a class="section-anchor" data-scroll-name="#press"></a></h2>
     <ul >
@@ -273,7 +273,7 @@
         [<a href="https://subscriber.politicopro.com/article/eenews/1059986651">www</a>]. </li>
     </ul>
 
-    <p class="uparrow-final border"><a href="#main">&#9650</a></p>
+    <div class="back-to-top-arrow"><a title="Back to top" href="#main">▲</a></div>
 </div>
 
 <script>
