About page HTML/CSS: rework abstract and indexlist.
- Reuse some spacing rules already defined for other pages.

- Rename indexlist to indexes, and style it more easily by not using <ul> and using display: flex.

--- a/project/lib/templates/lib/about.html
+++ b/project/lib/templates/lib/about.html
@@ -14,21 +14,27 @@
 
     <h1>About CoralNet</h1>
 
-    <p class="abstract">
-        CoralNet is a resource for benthic images analysis.
-        The site deploys deep neural networks which allow fully and semi automated annotation of images.
-        It also serves as a data repository and collaboration platform.
-        CoralNet is open source and free to use thanks to generous support from NSF and NOAA.
-    </p>
+    <div class="page-section" id="abstract">
+        <p>
+            CoralNet is a resource for benthic images analysis.
+            The site deploys deep neural networks which allow fully and semi automated annotation of images.
+            It also serves as a data repository and collaboration platform.
+            CoralNet is open source and free to use thanks to generous support from NSF and NOAA.
+        </p>
+    </div>
 
-    <ul class="indexlist">
-    <li class="first-item"><a href="#site">site</a></li>
-    <li><a href="#story">story</a></li>
-    <li><a href="#credits">credits</a></li>
-    <li><a href="#people">people</a></li>
-    <li><a href="#papers">papers</a></li>
-    <li><a href="#press">press</a></li>
-    </ul>
+    <hr class="light"/>
+
+    <div class="page-section" id="indexes">
+        <a href="#site">site</a>
+        <a href="#story">story</a>
+        <a href="#credits">credits</a>
+        <a href="#people">people</a>
+        <a href="#papers">papers</a>
+        <a href="#press">press</a>
+    </div>
+
+    <hr class="light"/>
 
     <h2 id="site">The site<a class="section-anchor" data-scroll-name="#site"></a></h2>
     <p>
