Define the separate article styles to be "About vs. everything else" instead of "Infopages vs. flatpages/helptext".
About is the only page which is more of an extra instead of having info about how to use the site. (That's the intent at least.) So it makes sense for that page alone to have the unique flair.

--- a/project/lib/templates/lib/about.html
+++ b/project/lib/templates/lib/about.html
@@ -1,19 +1,18 @@
 {% extends "base.html" %}
-{% load static %}
 
 {% block page-specific-includes %}
-    {% include "static-local-include.html" with type="css" path="css/infopage.css" %}
+    {% include "static-local-include.html" with type="css" path="css/about.css" %}
 {% endblock %}
 
 {% block content %}
 
 
-<div class="article-body narrow">
+<div class="article-body">
 
     <!-- This is called heading-top because top is already taken. -->
     <h1 id="heading-top">About CoralNet</h1>
 
-    <div class="page-section" id="abstract">
+    <div class="page-section">
         <p>
             CoralNet is a resource for benthic images analysis.
             The site deploys deep neural networks which allow fully and semi automated annotation of images.
