--- a/project/lib/templates/lib/privacy_policy.html
+++ b/project/lib/templates/lib/privacy_policy.html
@@ -1,12 +1,8 @@
 {% extends "base.html" %}
 
-{% block page-specific-includes %}
-  {% include "static-local-include.html" with type="css" path="css/infopage.css" %}
-{% endblock %}
-
 {% block content %}
 
-<div class="article-body narrow">
+<div class="article-body">
 
 <h1>CoralNet's Privacy Policy</h1>
 
