--- a/project/lib/templates/lib/release_notes.html
+++ b/project/lib/templates/lib/release_notes.html
@@ -1,13 +1,8 @@
 {% extends "base.html" %}
-{% load static %}
-
-{% block page-specific-includes %}
-    {% include "static-local-include.html" with type="css" path="css/infopage.css" %}
-{% endblock %}
 
 {% block content %}
 
-<div class="article-body center">
+<div class="article-body">
 
 <h1>CoralNet Release Notes</h1>
 
