--- a/project/lib/static/css/about.css
+++ b/project/lib/static/css/about.css
@@ -1,4 +1,3 @@
-
 html {
     /*
     This SHOULD only affect navigation to headers on the page.
@@ -15,13 +14,10 @@ body {
     text-rendering: optimizeLegibility;
 }
 
-h1, h2 {
-    /*
-    When scrolling to a header, aim a little bit above the header
-    so that the top of the header isn't right at the edge of the
-    viewport.
-    */
-    scroll-margin-top: 40px;
+div.article-body {
+    /* More narrow than usual. */
+    max-width: 600px;
+    margin: 0 auto;
 }
 
 div#indexes {
