Define the privacy policy page (and the old beta release page) as Markdown instead of HTML.
This should make it easier to track changes in the privacy policy going forward.

--- a/project/flatpages_custom/templates/flatpages/default.html
+++ b/project/flatpages_custom/templates/flatpages/default.html
@@ -1,12 +1,1 @@
-{% extends "base.html" %}
-{% load markdown_to_html %}
-
-{% block title %}{{ flatpage.title }} | CoralNet{% endblock %}
-
-{% block content %}
-
-<div class="article-body">
-  {{ flatpage.content|markdown_to_html }}
-</div>
-
-{% endblock %}
+{% include "lib/markdown_article.html" with title=flatpage.title markdown_content=flatpage.content %}
