--- a/project/lib/templates/lib/about.html
+++ b/project/lib/templates/lib/about.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}About{% endblock %}
+
 {% block page-specific-includes %}
     {% include "static-local-include.html" with type="css" path="css/about.css" %}
 {% endblock %}
